RadxEvadF/NOTES.txt
RadxConvert-lite:
  xradar:DataTree = RadxConvert(filename, URL) ...


Step 1:
  write simple function to test data passing back and forth
*** Use extern "C" to prevent name mangling
*** Use byref() instead of pointer() because it is faster and we don't need the pointer in python.

*** passing arrays ...
Not needed yet:     use Ammar's conversions.py to convert Python list to ctypes array
??     numpy dataarray? to c_types ???
??     xarray.DataTree to c_types ???
just used the simple example from ctypes (no need for POINTERS or byref() in C library, just use "const *float", or "*float"):
from ctypes import *
TenIntegers = c_int * 10
ii = TenIntegers(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)
print(ii)
for i in ii: print(i, end=" ")

----
this works ...
>>> j = c_int(33)
>>> j
c_int(33)
>>> myarr = c_float * 5
>>> ii = myarr(1,2,3,4,5)
>>> ii
<__main__.c_float_Array_5 object at 0x1059797c0>
>>> jj = myarr(0,0,0,0,0)
>>> jj
<__main__.c_float_Array_5 object at 0x105979e00>
>>> lroselib.RadxEvad(ii, nGates, jj))
  File "<python-input-29>", line 1
    lroselib.RadxEvad(ii, nGates, jj))
                                     ^
SyntaxError: unmatched ')'
>>> lroselib.RadxEvad(ii, nGates, jj)
45210384
>>> for j in jj: print(j, end=" ")
... 
4.0 4.0 4.0 0.0 0.0 >>> 
>>> 
>>> nGates
4
----------


extern "C" 
{
  TestDataPassing(
    const float *sweepIndex, 
    const float *rays, 
    size_t nGates,
    float *ht,
    float *uu,
    );
}
    print... or take avg, whatever and return something. 

    TestDataPassing.cc  ==> libRadxlite.so
    TestDataPassing.py ==> TestDataPassing(...)

Linux:    $ g++ -dynamiclib TestDataPassing.cc -o TestDataPassing.so
MacOS:    $ g++ -dynamiclib TestDataPassing.cc -o TestDataPassing.dylib
Windows:  ??  $ g++ -dynamiclib TestDataPassing.cc -o TestDataPassing.dylib

MacOS:    $ g++ -dynamiclib -I../lrose/include TestDataPassing.cc -o TestDataPassing.dylib

Use -l: instead of -l. For example -l:libXYZ.a to link with libXYZ.a. Notice the lib and .a are written out, as opposed to -lXYZ which would auto-expand to libXYZ.so/libXYZ.a.

(base) eol-amalfi:RadxEvadF brenda$ g++ -dynamiclib -I./include RadxEvad.cc ./lib/libtoolsa.a  -o lroselite.dylib


Step 2:
    create binding and compile
    try TestDataPassing calling libRadx, or some other LROSE lib?

----
>>> cdll.LoadLibrary("lroselite.dylib")
<CDLL 'lroselite.dylib', handle 760e4eb0 at 0x1058fefd0>
>>> lroselite = CDLL("lroselite.dylib")
>>> lroselite.RadxEvad
<_FuncPtr object at 0x105998790>
>>> lroselite.RadxEvad(ii, ii, nGates, jj, jj, jj, jj, jj)
34619536
------

    test packaging 

Step 3:
    test import and use

>>> from ctypes import *
>>> cdll.LoadLibrary("TestDataPassing.dylib")
>>> lroselib = CDLL("TestDataPassing.dylib")
>>> lroselib.RadxEvad
<_FuncPtr object at 0x102938b80>

>>> i = c_int()
>>> lroselib.RadxEvad(byref(i))
43960968
>>> i
c_int(47)  <<== 47 was set in the RadxEvad function!


So, to pass an array by reference, then we need c_???


-----

xarray.Dataset/DataTree ==> base types ==> RadxEvad-lite

use SPOL GDEX example ...

xarray.DataArray.astype(dtype, ... order='C', ...)

mamba create -n faas zarr xarray xradar requests aiohttp

>>> hpc_url_horizontal_scan = "https://boreas.hpc.ucar.edu:6443/gdex-data/d694517/v2.0_zarr/cfrad.20220525_030910.927_to_2022052\
5_031137.777_SPOL_PrecipSur2_SUR.zarr"
>>> import xarray as xr
... dt_horizontal = xr.open_datatree(hpc_url_horizontal_scan, engine="zarr", decode_timedelta=False)
... 
>>> dt_horizontal
>>> ds_horizontal_sweep0 = dt_horizontal["sweep_0"].to_dataset()

How to get VEL for all sweeps?

# It is just a demonstration, you can ignore the logic
def filter_radar(ds):
    ds = ds.assign(
        VEL=ds.["VEL"]
    )
    return ds

# Apply the function across all sweeps
VEL_dtree = dt_horizontal.xradar.map_over_sweeps(filter_radar)


>>> dt_horizontal["/sweep_0"]["VEL"].data
array([[-0.11261564, -1.7540228 , -1.2277151 , ...,         nan,
                nan,         nan],
       [-0.04292193, -2.3776615 , -0.9921984 , ...,         nan,
                nan,         nan],
       [ 0.0736348 , -2.0808623 , -1.7480147 , ...,         nan,
                nan,         nan],
       ...,
       [-0.05373647, -1.8862005 , -1.2277151 , ...,         nan,
                nan,         nan],
       [ 0.25868365, -2.0688462 , -1.3418686 , ...,         nan,
                nan,         nan],
       [-0.13905118, -1.6747161 , -0.9213031 , ...,         nan,
                nan,         nan]], shape=(480, 1999), dtype=float32)

Can I send this??? 
sweeps[0] = 0
sweeps[1] = 480 ???

yes, ...

>>> rays = dt_horizontal["/sweep_0"]["VEL"].data
>>> rays
array([[-0.11261564, -1.7540228 , -1.2277151 , ...,         nan,
                nan,         nan],
       [-0.04292193, -2.3776615 , -0.9921984 , ...,         nan,
                nan,         nan],
       [ 0.0736348 , -2.0808623 , -1.7480147 , ...,         nan,
                nan,         nan],
       ...,
       [-0.05373647, -1.8862005 , -1.2277151 , ...,         nan,
                nan,         nan],
       [ 0.25868365, -2.0688462 , -1.3418686 , ...,         nan,
                nan,         nan],
       [-0.13905118, -1.6747161 , -0.9213031 , ...,         nan,
                nan,         nan]], shape=(480, 1999), dtype=float32)
>>> rays[0]
array([-0.11261564, -1.7540228 , -1.2277151 , ...,         nan,
               nan,         nan], shape=(1999,), dtype=float32)
>>> rays[1]
array([-0.04292193, -2.3776615 , -0.9921984 , ...,         nan,
               nan,         nan], shape=(1999,), dtype=float32)

Now, add the rays from the next sweep ...
>>> import numpy as np
>>> np.append(rays, dt_horizontal["/sweep_1"]["VEL"].data, axis=0)
array([[-0.11261564, -1.7540228 , -1.2277151 , ...,         nan,
                nan,         nan],
       [-0.04292193, -2.3776615 , -0.9921984 , ...,         nan,
                nan,         nan],
       [ 0.0736348 , -2.0808623 , -1.7480147 , ...,         nan,
                nan,         nan],
       ...,
       [-0.3529388 , -2.509839  , -1.7840632 , ...,         nan,
                nan,         nan],
       [ 0.15774791, -2.2142417 , -1.0510776 , ...,         nan,
                nan,         nan],
       [-0.25200307, -1.8621682 , -1.1580213 , ...,         nan,
                nan,         nan]], shape=(960, 1999), dtype=float32)



def extract_rays(ds):
    ds = ds.assign(
        VEL=ds.["VEL"]
    )
    return ds


rays = np.empty([480,1999], dtype=np.float64)

>>> rays2 = np.empty([480,1999], dtype=np.float64)
>>> for group in dt_horizontal.match("/sweep_*"):
...     print(f"Node Name: {group}")
...     np.append(rays2, dt_horizontal[group]["VEL"].data, axis=0)
...  

Instead of appending rows, allocate a suitably sized array, and then assign to it row-by-row:

>>> isweep = 0
>>> a = np.empty([nsweeps*nrays,ngates])
>>> for group in dt_horizontal.match("/sweep_*"):
...     print(f"Node Name: {group}")
...     a[isweep*nrays:isweep*nrays+nrays] = dt_horizontal[group]["VEL"].data
...     isweep += 1
...     
Node Name: sweep_0
Node Name: sweep_1
Node Name: sweep_2
Node Name: sweep_3


$ g++ -dynamiclib -I./include RadxEvad.cc ./lib/libtoolsa.a  -o lroselite.dylib


TODO: need to handle sweeps with varying # of rays.
TODO: send this array of rays: "a" to RadxEvad and see if it is useful.

NEXT apps to convert ...
Radx2Grid, RadxConvert, RadxPrint 

